[Bugs] Fix Carousel text align, finish todos in code

--- a/src/App.css
+++ b/src/App.css
@@ -423,3 +423,7 @@ svg {
   min-width: 280px;
   max-width: 280px;
 }
+
+.carousel-inner {
+  text-align: inherit;
+}
